# Audionomy

./: .gitattributes  .gitignore  README.md  db.sqlite3  main.py  manage.py  pyproject.toml
audionomy_app/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
audionomy_app/migrations/: 0001_initial.py
audionomy_app/templates/audionomy_app/: add_entry.html  base.html  confirm_delete.html  edit_entry.html  home.html  manage_dataset.html
audionomy_project/: asgi.py  settings.py  urls.py  wsgi.py
gui/: app.py  main_window.py
gui/components/: audio_player.py  create_dataset_dialog.py  dialogs.py  entry_form.py
gui/resources/: style.qss
gui/views/: dashboard_view.py  dataset_view.py  export_view.py  home.py  log_viewer.py  settings_view.py  visualization.py  visualization_view.py
scripts/: audio_processing.py  dataset_manager.py  export_handler.py  logger.py
templates/: suno.template
