[tool.poetry]
name = "audionomy"
version = "0.1.0"
description = "An autonomous audio library builder using Django and pydub."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "audionomy_app" },
    { include = "audionomy_project" }
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
pydub = "^0.25"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
