[project]
name = "audionomy"
version = "1.0.0"
description = ""
authors = [
    {name = "sandy-sp",email = "sandeep.paidipati@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pyside6 (>=6.8.2.1,<7.0.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "qtawesome (>=1.4.0,<2.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "datasets (>=3.3.2,<4.0.0)",
    "huggingface-hub (>=0.29.2,<0.30.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12.0"

